hnn_core/gui/gui_styles.css
/* ... */
/*  adjust bottom-padding around widget-tab-contents

        note: we can target a specific, active tab with...
        .param-window-tabs-widget >
        .widget-tab-bar:has(.lm-TabBar-tab:nth-child(1).lm-mod-current) +
        .widget-tab-contents
*/
.param-window-tabs-widget >
.widget-tab-contents {
padding-bottom: 10px !important;
}

/*  make subtabs of the Network tab "sticky"  */
.network-tab-contents {
    height: 99% !important;
    flex: none !important;
}

/*
    hide the existing-plots container in Visualization tab

        Note: viz_manager relies on the presence of the "existing-plots"
        HTML container in various parts of the code; however, the display
        for existing-plots is adds clutter to the visualization tab. Since
        its not obvious how to untangle viz_manager's dependence on this
        element, we can simply hide the display from the user.
*/
.jupyter-widgets.widget-vbox.existing-plots {
    display: none !important;
}

/* ---------------------------------------- */
/* ---- adjust tab and content borders ---- */
/* ---------------------------------------- */
/*
    the blocks below ensure that the border around the container
    that holds the tabs themselves takes up no space
*/

.param-window-tabs-widget .widget-tab-bar {
    border: 0px solid lightgrey;
}

/*  set the border color for the individual tabs  */
.param-window-tabs-widget .lm-TabBar-tab {
    border-color: lightgrey !important;
}

/*
    This adjusts the content container's border, not the borders
    on the tabs themselves. Though it does effectively set the
    bottom border around the inactive tabs (with the active tab
    not having a bottom border).
*/
.param-window-tabs-widget .widget-tab-contents {
    border: 1px solid lightgrey !important;
}

/* ---------------------------------------- */
/* ---- adjust simulation-tab-contents ---- */
/* ---------------------------------------- */

/*
    style the text titles differentiating run parameters from
    default visualization parameters
*/
.sim-tab-titles {
    background: gray;
    color: white;
    width: 300px;
    padding: 0px 5px;
    margin-bottom: 2px;
}

/*
    allow the space between sections to dynamically shrink/grow
    based on available space so elements don't overlap
*/

.dynamic-spacer {
    flex: 1 1 auto !important;
    min-height: 4px !important;
    max-height: 15px !important;
}

/* add left margin to the dropdown widget for saving outputs */
.simulation-list-widget {
    margin-left: 6px !important;
}

/* adjust sim tab button properties to avoid overlap or overflow */
.simulation-tab-contents,
.simulation-tab-contents .widget-hbox,
.simulation-tab-contents .widget-vbox {
    overflow: hidden !important;
    box-sizing: border-box !important;
}

/*
    There is an additional Output() box around "Core" and "MPI cmd"
    since the "MPI cmd" is dynamically inserted when the MPI backend
    is selected. We need to remove the margin around that extra box
    so that the input fields line up properly.
*/
.backend-config-out {
    margin: 0px !important;
}

/* ---------------------------------------- */
/* -- adjust visualization-tab-contents --- */
/* ---------------------------------------- */
/*
    the blocks below remove the border in visualization-tab-contents
    when there is no figure present
*/

/*
    remove the "top" edge of the border by setting border to "none"
    if the "lm-TabBar-tab" child class is not present

        Note: This element needs to be targeted with "::after", as that
        element is used to form the border that spans from the end of
        the tab to the end of the container that holds the figure.
*/
.visualization-tab-contents
.lm-TabBar-content:not(:has(.lm-TabBar-tab))::after {
    content: none !important;
    border: none !important;
    display: none !important;
}

/*
    remove the "U" edges of the border by setting border to none if
    the "widget-container" child is not present
*/
.visualization-tab-contents
.widget-tab-contents:not(:has(.widget-container)) {
    border: none !important;
    box-shadow: none !important;
    outline: none !important;
}

/*  adjust make figure button  */
.make-fig-btn {
    flex: 1 1 auto !important;
    width: auto !important;
    margin: 2px 2px 2px 10px !important;
}

/* ---------------------------------------- */
/* ----- add scrollbar gutter to tabs ----- */
/* ---------------------------------------- */

/*
    Style the gutter for the *child* containers within the network-tab-contents. This
    adds the gutter *inside* the Connectivity and Cell Parameter widgets.
*/
.network-tab-contents > .widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}

/*
    Style the gutter for the *parent* container of drive-tab-contents. This adds the
    gutter *outside* of the widgets.

        Note: To do this, we check if the 3rd tab (External Drives) is
        active, and we selectively style the contents container for that
        tab only, since we do not want the gutter present on all tabs.
*/
.param-window-tabs-widget >
.widget-tab-bar:has(.lm-TabBar-tab:nth-child(3).lm-mod-current) +
.widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}

/*
    similarly style the gutter for the *parent* container of
    visualization-tab-contents, which adds the gutter *outside*
    of the widgets
*/
.param-window-tabs-widget >
.widget-tab-bar:has(.lm-TabBar-tab:nth-child(4).lm-mod-current) +
.widget-tab-contents {
    scrollbar-gutter: stable !important;
    overflow-y: auto !important;
    padding-right: 10px !important;
}
/* ... */

